@@ -4,6 +4,7 @@
 #include "helpers.h"
 #include "defaults.h"
 #include "utils.h"
+#include "config.h"
 
 /**
  * Message
