@@ -5,6 +5,7 @@ libece 0.4 ():
 	- bindings: use distutils for build/install; added relative include and
 	  library dirs
 	- api: return ECE_RC_INVALIDCERT upon certification validation failures
+	- logging: log level can be configured at runtime in ece.json (log/lev)
 
 libece 0.3 (25/09/2013):
 	- fix certificate request encoding
